LU-1322 llite: check dentry in ll_readdir

If application calls lseek to change f_pos, it is possible to point
f_pos to the middle of a dentry and we need to check for the situation
to avoid causing problems in ll_readdir_page.

Signed-off-by: Peng Tao <tao.peng@emc.com>
Change-Id: I49ab94ad5c63c3029d5ad96e27e38e124a135ed8